# aviutl2-catalog

./: .env.development  .env.production  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: check.yml  winget.yml
Plugin/: UpdateChecker.aui2  makefile  update.md  update_checker.cpp
docs/: README.en.md  README.ko.md  README.zh-CN.md  README.zh-TW.md
src/: Router.jsx  Router.tsx  main.jsx  main.tsx  routePaths.ts
src-tauri/: Cargo.toml  eula.txt  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  installer.json
src-tauri/icons/: icon.icns
src-tauri/licenses/: eula.en.txt  eula.ja.txt  eula.ko.txt  eula.zh-CN.txt  eula.zh-TW.txt
src-tauri/resources/: LICENSE.txt  UpdateChecker.aui2
src-tauri/src/: lib.rs  main.rs  paths.rs
src-tauri/src/commands/: archive.rs  catalog.rs  download.rs  installed.rs  logging.rs  mod.rs  niconi_commons.rs  system.rs  version.rs  zstd.rs
src-tauri/windows/: installer.nsi
src/app/: AppShell.jsx  Router.jsx  markdown.js  utils.js
src/bootstrap/: useCatalogBootstrap.ts  useGlobalGuards.ts  window.ts
src/components/: AppShell.jsx  DeepLinkHandler.jsx  DeprecatedPackageChip.tsx  ErrorDialog.jsx  ErrorDialog.tsx  FilterPanel.jsx  Header.jsx  Icon.jsx  ImageCarousel.jsx  PackageCard.jsx  PackageNoticeModal.tsx  PluginCard.jsx  ProgressCircle.jsx  ProgressCircle.tsx  SettingsDialog.jsx  SortBar.jsx  TitleBar.jsx  UpdateDialog.jsx  UpdateDialog.tsx
src/i18n/: index.ts  (+2 more)
(+365 files in other folders)
